--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 .carousel > .carousel-inner > .carousel-item > img{
     width  : 100vh;
     height : 94vh;
-	/* margin-bottom : 2.5%; */
+	/* padding-bottom : -2.5%; */
 }
 
 .bg {
