--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,16 @@
-.carousel > .carousel-inner > .carousel-item > img{
+.carousel > .carousel-inner > .carousel-item > img {
     width  : 100vh;
-    height : 94vh;
-	/* padding-bottom : -2.5%; */
+    height : calc(100vh - 56px);
+    /* height : 10vh; */
+}
+
+/*.main-window-alt {
+	width  : 100vh;
+    height : calc(100vh - 56px);
+}*/
+
+.centered-el {
+	padding-top : 45vh;
 }
 
 .bg {
